bazı sayfalarda bug fix yapıldı
##API tarafında filtreleme ile admin stok rapor yapıldı

--- a/B2BApp.Web/Views/Satis/Index.cshtml
+++ b/B2BApp.Web/Views/Satis/Index.cshtml
@@ -48,13 +48,18 @@
             <br />
 
             <div class="input-group">
-                <label for="subeSelect" class="form-label" style="margin-right: 10px;">Sube: </label> <select id="subeSelect" placeholder='select item'></select>
+                <label for="subeSelect" class="form-label" style="margin-right: 10px;">Sube: </label> 
+                <select id="subeSelect" placeholder='select item'>
+                    <option></option>
+                </select>
             </div>
             <br />
 
             <div class="input-group">
                 <label for="urunSelect" class="form-label" style="margin-right: 10px;">Urun: </label> 
-                <select class="select2" id="urunSelect" placeholder='select item'></select>
+                <select class="select2" id="urunSelect" placeholder='select item'>
+                    <option></option>
+                </select>
             </div>
             <br />
 
