--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -53,13 +53,19 @@
         </div>
 
         <div class="input-group">
-            <label for="categorySelectDrawer" class="form-label">Kategori</label> <select id="categorySelectDrawer" class="select2" placeholder='select item'></select>
+            <label for="categorySelectDrawer" class="form-label" style="margin-right:15px">Kategoriler: </label> 
+            <select id="categorySelectDrawer" class="select2" placeholder='select item'>
+                <option></option>
+            </select>
         </div>
         <br />
 
         <div class="input-group">
 
-            <label for="tedarikciSelectDrawer" class="form-label">Tedarikci</label> <select id="tedarikciSelectDrawer" class="select2" placeholder='select item'></select>
+            <label for="tedarikciSelectDrawer" class="form-label" style="margin-right:15px">Tedarikciler: </label> 
+            <select id="tedarikciSelectDrawer" class="select2" placeholder='select item'>
+                <option></option>
+            </select>
         </div>
 
         <br />
@@ -150,10 +156,9 @@
                 // getirilen verilerin gerekli yerlere atanması
                 $("#urunIsim").val(response.data.urunAdi);
                 $("#categorySelectDrawer").val(response.data.kategori.id).trigger('change');
-                $("#tedarikciSelectDrawer").val(response.data.kategori.id).trigger('change');
+                $("#tedarikciSelectDrawer").val(response.data.tedarikci.id).trigger('change');
                 $("#urunId").val(response.data.id);
                 $("#urunFiyat").val(response.data.fiyat);
-                debugger;
 
             }
         })
@@ -250,10 +255,12 @@
                 `<label for="urunIsimEkle" class="form-label">Urun</label> <input type="text" id="urunIsimEkle" class= "form-control" value="" required>
                          <label for= "urunFiyatEkle" class= "form-label">Fiyat</label> <input type="number" id = "urunFiyatEkle" class= "form-control" value = "" required>
                          <br/>
-                         <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'></select>
+                             <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'>                    <option></option>
+    </select>
                          <br/>
                          <br/>
-                         <label for="tedarikciSelectSave" class= "form-label">Tedarikci</label> <select id="tedarikciSelectSave" class="select2" placeholder='select item'></select>
+                             <label for="tedarikciSelectSave" class= "form-label">Tedarikci</label> <select id="tedarikciSelectSave" class="select2" placeholder='select item'>                    <option></option>
+    </select>
 
                          `,
 
@@ -318,7 +325,7 @@
                 };
             });
             $("#categorySelectSave").select2({
-                placeholder: "Choose a person attending todays meeting",
+                placeholder: "Kategori Seçin",
                 data: result,
                 dropdownParent: $('.swal2-container'), // dropdownParent olarak SweetAlert2 konteynerini belirtin
                 width: 200,
@@ -343,7 +350,7 @@
             });
             console.log(result);
             $("#tedarikciSelectSave").select2({
-                placeholder: "Choose a person attending todays meeting",
+                placeholder: "Tedarikçi Seçin",
                 data: result,
                 dropdownParent: $('.swal2-container'), // dropdownParent olarak SweetAlert2 konteynerini belirtin
                 width: 200,
@@ -371,7 +378,7 @@
             });
             console.log(result);
             $("#categorySelectDrawer").select2({
-                placeholder: "Choose a person attending todays meeting",
+                placeholder: "Kategori Seçin",
                 data: result,
 
                 width: 200,
