Admin Şubestokrapor eklendi

--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -401,7 +401,7 @@
                                 
                                 @*Stok Rapor*@
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="Firma" asp-action="index">
+                                    <a class="nav-link " asp-controller="SubeStok" asp-action="stokrapor">
                                         <i class="icon">
                                             <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
                                                 <g>
