--- a/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
+++ b/B2BApp.Web/Views/Shared/_DashboardLayout.cshtml
@@ -371,7 +371,7 @@
                             <ul class="sub-nav collapse" id="AdminRaporlar" data-bs-parent="#sidebar-menu">
                                 @* Kategori Satış Rapor *@
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="Firma" asp-action="index">
+                                    <a class="nav-link " asp-controller="satis" asp-action="detayliSatisRapor">
                                         <i class="icon">
                                             <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
                                                 <g>
@@ -380,13 +380,13 @@
                                             </svg>
                                         </i>
                                         <i class="sidenav-mini-icon"> B </i>
-                                        <span class="item-name">Kategori Bazlı Satış</span>
+                                        <span class="item-name">Satış Rapor</span>
                                     </a>
                                 </li>
 
                                 @*Tedarikci Performans Rapor*@
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="Firma" asp-action="index">
+                                    <a class="nav-link " asp-controller="" asp-action="">
                                         <i class="icon">
                                             <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
                                                 <g>
@@ -416,7 +416,7 @@
                                 
                                 @*Kâr Rapor*@
                                 <li class="nav-item">
-                                    <a class="nav-link " asp-controller="Firma" asp-action="index">
+                                    <a class="nav-link " asp-controller="" asp-action="">
                                         <i class="icon">
                                             <svg class="icon-10" xmlns="http://www.w3.org/2000/svg" width="10" viewBox="0 0 24 24" fill="currentColor">
                                                 <g>
